feat: 光栅化渐变着色三角形

--- a/injs/4_简单光线追踪镜面反射.html
+++ b/injs/4_简单光线追踪镜面反射.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <p>简单光线追踪 漫反射</p>
+    <p>简单光线追踪 镜面反射</p>
     <div class class="centered">
         <canvas id="canvas" width=800 height=800 style="border:1px grey solid"></canvas>
     </div>
